# DatosDinamicosSinteticos

./: .gitignore  .pylintrc  MEJORAS_ESTATICAS.md  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: pylint.yml
app/: main.py
app/config/: constantes.py
app/utils/: descargas.py  generacion.py
app/utils/plantillas/: __init__.py  base.py  educacion_estudiantes.py  finanzas_personales.py  gastos_personales.py  historial_clinico.py  logistica_entregas.py  marketing_digital.py  recursos_humanos.py  sensores_iot.py  tickets_servicio.py  ventas_ecommerce.py  ventas_supermercado.py
tests/: __init__.py  conftest.py  test_integracion.py  test_performance.py  test_plantillas_base.py  test_plantillas_especificas.py
