[project]
name = "datos-dinamicos-sinteticos"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "streamlit",
    "faker",
    "openpyxl",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "psutil",
    "pylint",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
